# drf-iiif-store

./: LICENSE.rst  README.md  docker-compose.yml  pyproject.toml  requirements.txt  search_serializers.py  test_muya_iiif_store.py
.github/workflows/: test_pytest.yaml
example_project/: Dockerfile  entrypoint  nginx.conf  requirements.txt
example_project/api/: urls.py
example_project/example_project/: settings.py  urls.py
iiif_store/: apps.py  fields.py  iiif_utils.py  models.py  parsers.py  prezi_upgrader.py  serializers.py  settings.py  signals.py  tasks.py  utils.py  views.py
iiif_store/migrations/: 0001_initial.py  0002_auto_20210426_1053.py  0002_iiifresource_contexts.py
iiif_store/urls/: api.py  public.py
tests/: conftest.py  docker-compose.test.yml  pytest.ini  test_env  test_iiif_store.py  utils.py
tests/fixtures/: iiif3_forager.json  simple_multilingual_iiif3_manifest.json
tests/fixtures/search/iiif3/: search_manifest_1.json  search_manifest_2.json  search_manifest_3.json  search_manifest_4.json  simple_iiif3_manifest.json
tests/iiif_store/: test_iiif_store_api.py  test_iiif_store_search_api.py  test_iiif_store_simple_iiif3_manifest.py  test_iiif_store_simple_multilingual_iiif3_manifest.py  test_json_resource_indexing.py  test_muya_iiif_store.py
