[tool.poetry]
name = "drf-iiif-store"
version = "0.1.0"
description = "Django REST Framework IIIF Store"
license = "MIT"
authors = ["Finlay McCourt <finlay.mccourt@digirati.com>"]
readme = "README.md"
packages = [
    { include = "iiif_store" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
beautifulsoup4 = "^4.11.1"
bleach = "^4.1.0"
python-dateutil = "^2.8.2"
drf-search-service = {git = "https://github.com/digirati-co-uk/drf-search-service", rev = "feature/madoc_enrichment_updates"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
requests = "^2.28.1"
pytest = "^6.2.5"
pytest-docker = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
