[tool.poetry]
name = "drf-iiif-store"
version = "0.2.1"
description = "Django REST Framework IIIF Store"
license = "MIT"
authors = ["Finlay McCourt <finlay.mccourt@digirati.com>"]
readme = "README.md"
packages = [
    { include = "iiif_store" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Django = "4.0.6"
djangorestframework = "^3.13.1"
django-model-utils = "^4.2.0"
beautifulsoup4 = "^4.10.0"
bleach = "^6.0.0"
python-dateutil = "^2.8.2"
django-q = "^1.3.9"
drf-search-service = {git = "https://github.com/digirati-co-uk/drf-search-service", tag = "0.2.1"}
setuptools = "^67.2.0"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
requests = "^2.27.1"
pytest-docker = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
